tests/snapshots/examples_fixtures/io__aoc_day3_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day3_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Branch Type Mismatch

The branches of this `if` expression do not agree on a type.

  examples/io/aoc_day3_haskell_style.flx:58:5
   |
56 |         Some(0)
   |         ------- `then` branch returns `Int`

   |         ------- this branch established the expected type
57 |     } else {
58 |     match best_number_string(cleaned, 0, n) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
59 |         Some(s) -> Some(parse_int(s)),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
60 |         _ -> None
   | ^^^^^^^^^^^^^^^^^
61 |     }
   | ^^^^^

Note:
  then branch type: Int
  else branch type: Option<Int>
  the `then` branch fixes the type expected from the whole `if`
  the `else` branch produces the competing type

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.


Warning: missing CFG bytecode call target binding


Found 1 error and 1 warning.
== stdout ==
<not executed>
